Fixed a temporary setup for animations

--- a/guideline-app/app/ui/components/image-text-aside/styles.less
+++ b/guideline-app/app/ui/components/image-text-aside/styles.less
@@ -3,9 +3,9 @@
   padding-top: 32px;
   padding-bottom: 32px;
 
-  .image {
+  .animationSection {
     // todo: set this to absolute width/height values once we have correct png files
-    max-width: 124px;
+    max-width: 148px;
     max-height: 80px;
   }
 
