--- a/guideline-app/app/ui/containers/about/styles.less
+++ b/guideline-app/app/ui/containers/about/styles.less
@@ -8,13 +8,13 @@
   }
 
   #frontpageAnimation {
-    max-width: 490px;
+    width: 800px;
     position: relative;
-    top: 56px;
-    left: 364px;
+    top: 45px;
+    left: 200px;
 
     @media(max-width: 1200px) {
-      left: 78px;
+      left: -120px;
     }
   }
 
